--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -738,6 +738,7 @@
 "unbookmark" = "Убрать из коллекции";
 "empty_playlist" = "В этом плейлисте нет аудиозаписей.";
 "edit_playlist" = "Редактировать плейлист";
+"unable_to_load_queue" = "Не удалось загрузить очередь.";
 
 /* Notifications */
 
@@ -979,6 +980,7 @@
 "going_to_report_photo" = "Вы собираетесь пожаловаться на данную фотографию.";
 "going_to_report_user" = "Вы собираетесь пожаловаться на данного пользователя.";
 "going_to_report_video" = "Вы собираетесь пожаловаться на данную видеозапись.";
+"going_to_report_audio" = "Вы собираетесь пожаловаться на данную аудиозапись.";
 "going_to_report_post" = "Вы собираетесь пожаловаться на данную запись.";
 "going_to_report_comment" = "Вы собираетесь пожаловаться на данный комментарий.";
 
