Add audios picker & move track in smal player вниз

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -786,6 +786,8 @@
 "unable_to_load_queue" = "Error when loading queue.";
 
 "fully_delete_audio" = "Fully delete audio";
+"attach_audio" = "Attach audio";
+"detach_audio" = "Detach audio";
 
 /* Notifications */
 
