--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -684,6 +684,7 @@
 "audio" = "Аудиозапись";
 "playlist" = "Плейлист";
 "upload_audio" = "Загрузить аудио";
+"upload_audio_to_group" = "Загрузить аудио в группу";
 
 "performer" = "Исполнитель";
 "audio_name" = "Название";
@@ -734,6 +735,10 @@
 "no_playlists_user" = "Этот пользователь ещё не добавлял плейлистов.";
 "no_playlists_club" = "Эта группа ещё не добавляла плейлистов.";
 
+"no_audios_thisuser" = "Вы ещё не добавляли аудиозаписей.";
+"no_audios_user" = "Этот пользователь ещё не добавлял аудиозаписей.";
+"no_audios_club" = "Эта группа ещё не добавляла аудиозаписей.";
+
 "new_playlist" = "Новый плейлист";
 "created_playlist" = "создан";
 "bookmark" = "Добавить в коллекцию";
@@ -761,6 +766,15 @@
 "minutes_count_few" = "длится $1 минуты";
 "minutes_count_many" = "длится $1 минут";
 "minutes_count_other" = "длится $1 минут";
+
+"add_audio_to_club" = "Добавить аудио в группу";
+"what_club_add" = "В какую группу вы хотите добавить песню?";
+"group_has_audio" = "У группы уже есть эта песня.";
+"group_hasnt_audio" = "У группы нет этой песни.";
+
+"by_name" = "по композициям";
+"by_performer" = "по исполнителю";
+"no_access_clubs" = "Нет групп, где вы являетесь администратором.";
 
 /* Notifications */
 
