1 new commit to master: [WIP]: Add audios
- Теперь группа может разрешать загружать всем треки в неё
- Теперь треки загружаются на сервер ajax'ом, и так можно очень много аудио загружать
- Вёрстка списка плейлистов изменена, теперь она на гридах
- Немного изменено апи, теперь метод editAlbum сохраняет новую информацию ee объект плейлистов теперь возвращают реальное время
- Удалены лишние пути из routes.yml
- При переключении страниц теперь если на текущей странице есть играющий трек, он нормально подсвечивается
- Из init-db.sql удалены таблицы аудиозаписей
- В Groups.getSettings и groups.edit теперь есть информация о аудиозаписях

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -739,7 +739,8 @@
 
 "limits" = "Limits";
 "select_audio" = "Select audio from your computer";
-"audio_requirements" = "Audio must be between $1s to $2 minutes, weights to $3MB, contain audio stream must not infringe on the copyright";
+"audio_requirements" = "Audio must be between $1s to $2 minutes, weights to $3MB and contain audio stream.";
+"audio_requirements_2" = "Audio must not infringe copyright and related rights";
 "you_can_also_add_audio_using" = "You can also add audio from among the files you have already downloaded using";
 "search_audio_inst" = "audios search";
 
@@ -820,6 +821,7 @@
 "by_name" = "by name";
 "by_performer" = "by performer";
 "no_access_clubs" = "There are no groups where you are an administrator.";
+"audio_successfully_uploaded" = "Audio has been successfully uploaded and is currently being processed.";
 
 /* Notifications */
 
@@ -1214,6 +1216,7 @@
 "created" = "Created";
 
 "everyone_can_create_topics" = "Everyone can create topics";
+"everyone_can_upload_audios" = "Everyone can upload audios";
 "display_list_of_topics_above_wall" = "Display a list of topics above the wall";
 
 "topic_changes_saved_comment" = "The updated title and settings will appear on the topic page.";
