--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -695,7 +695,8 @@
 
 "limits" = "Ограничения";
 "select_audio" = "Выберите аудиозапись на Вашем компьютере";
-"audio_requirements" = "Аудиозапись должна быть длинной от $1c до $2 минут, весить до $3мб, содержать аудиопоток и не нарушать авторские права.";
+"audio_requirements" = "Аудиозапись должна быть длинной от $1c до $2 минут, весить до $3мб и содержать аудиопоток.";
+"audio_requirements_2" = "Аудиозапись не должна нарушать авторские и смежные права.";
 "you_can_also_add_audio_using" = "Вы также можете добавить аудиозапись из числа уже загруженных файлов, воспользовавшись";
 "search_audio_inst" = "поиском по аудио";
 
@@ -775,6 +776,7 @@
 "by_name" = "по композициям";
 "by_performer" = "по исполнителю";
 "no_access_clubs" = "Нет групп, где вы являетесь администратором.";
+"audio_successfully_uploaded" = "Аудио успешно загружено и на данный момент обрабатывается.";
 
 /* Notifications */
 
@@ -1132,6 +1134,7 @@
 "topics_other" = "$1 тем";
 "created" = "Создано";
 "everyone_can_create_topics" = "Все могут создавать темы";
+"everyone_can_upload_audios" = "Все могут загружать аудиозаписи";
 "display_list_of_topics_above_wall" = "Отображать список тем над стеной";
 "topic_changes_saved_comment" = "Обновлённый заголовок и настройки появятся на странице с темой.";
 "failed_to_create_topic" = "Не удалось создать тему";
