--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1298,6 +1298,12 @@
 "playlist_not_bookmarked" = "Плейлиста нет в вашей коллекции.";
 "invalid_cover_photo" = "Не удалось сохранить обложку плейлиста.";
 "not_a_photo" = "Загруженный файл не похож на фотографию.";
+"file_too_big" = "Файл слишком большой.";
+"file_loaded_partially" = "Файл загрузился частично.";
+"file_not_uploaded" = "Не удалось загрузить файл.";
+"error_code" = "Код ошибки: $1.";
+"ffmpeg_timeout" = "Превышено время ожидания обработки ffmpeg. Попробуйте загрузить файл снова.";
+"ffmpeg_not_installed" = "Не удалось обработать файл. Похоже, на сервере не установлен ffmpeg.";
 
 /* Admin actions */
 
@@ -1625,8 +1631,17 @@
 "tour_section_5_text_3" = "Кроме загрузки видео напрямую, сайт поддерживает и встраивание видео из YouTube";
 
 
-"tour_section_6_title_1" = "Аудиозаписи, которых пока что нет XD";
-"tour_section_6_text_1" = "Я был бы очень рад сделать туториал по этому разделу, но солнышко Вриска не сделала музыку";
+"tour_section_6_title_1" = "Слушайте аудиозаписи";
+"tour_section_6_text_1" = "Вы можете слушать аудиозаписи в разделе \"Мои Аудиозаписи\".";
+"tour_section_6_text_2" = "Этот раздел также регулируется настройками приватности.";
+"tour_section_6_text_3" = "Самые прослушиваемые песни находятся во вкладке \"Популярное\", а недавно загруженные — во вкладке \"Новое\"";
+"tour_section_6_text_4" = "Найти нужную песню можно в поиске.";
+"tour_section_6_text_5" = "Чтобы добавить песню в свою коллекцию, наведите на неё и нажмите на плюс.";
+"tour_section_6_text_6" = "Если вы не можете найти нужную песню, вы можете загрузить её самостоятельно.";
+"tour_section_6_bottom_text_1" = "<b>Важно:</b> песня не должна нарушать авторские права";
+"tour_section_6_title_1" = "Создавайте плейлисты";
+"tour_section_6_text_7" = "Вы можете создавать сборники треков во вкладке \"Мои плейлисты\".";
+"tour_section_6_text_8" = "Можно также добавлять чужие плейлисты в свою коллекцию.";
 
 
 "tour_section_7_title_1" = "Следите за тем, что пишут ваши друзья";
